--- a/backend/.env
+++ b/backend/.env
@@ -1,7 +1,7 @@
 DJANGO_SECRET_KEY=super-secret-key-for-docker-123456789
 DJANGO_DEBUG=True
 DJANGO_ALLOWED_HOSTS=localhost,127.0.0.1,backend
-
+#gbdnhf
 DB_NAME=postgres
 DB_USER=postgres
 DB_PASSWORD=postgres
